beta | GIDK-1tfrcu | Aditi | Alignment issue in discount dropdown

--- a/apps/web-giddh/src/app/ledger/components/ledgerDiscount/ledgerDiscount.component.scss
+++ b/apps/web-giddh/src/app/ledger/components/ledgerDiscount/ledgerDiscount.component.scss
@@ -18,3 +18,15 @@
     color: #a2a2a2;
     margin-bottom: 10px;
 }
+.ledger-percent-wrapper{
+    width: 100px;
+    padding-right: 20px !important;
+}
+.ledger-discount-wrapper{
+    width: 100px;
+}
+.fa-percent.pos-abs{
+    top: 9px;
+    right: 6px;
+    color: $gray;
+}
